k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: staging-j
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
